--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "^3.0.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
